--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "test": "vitest",
+    "test-ui": "vitest --ui"
+  },
   "devDependencies": {
-    "typescript": "^5.1.3"
+    "@vitest/ui": "^0.32.2",
+    "glob": "^10.3.1",
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.2"
   }
 }
